# playmz

./: CMakeLists.txt
src/: CMakeLists.txt  app.h  bounds.h  buffers.h  camera.h  image.h  input_handler.h  main.cpp  maze.h  object.h  quad.h  shaders.h  texture.h
src/2dshaders/: ptshader_frag.h  ptshader_vert.h
src/minimap/: frag.h  vert.h
src/shaders/: frag.h  vert.h
